--- a/src/App.css
+++ b/src/App.css
@@ -27,6 +27,7 @@
   display:flex;
 }
 main{
+  height: 100%;
   width: 100%;
   padding: 2px;
 }
@@ -34,6 +35,7 @@ main{
   background: #53a6ee;
   color: #eceaea;
   transition: all 0.5s;
+  height: 100vh;
 }
 
 .top_section{
@@ -79,7 +81,7 @@ main{
 .footer {
   background-color: #d6d4d4;
   color: #0a0a0a;
-  font-size: calc(2px + 2vmin);
+  font-size: calc( 2vmin);
   margin: 2px;
   padding: 3px;
   position: sticky;
